fix toolbar visibility

--- a/automad/src/client/admin/styles/components/editor/toolbar.less
+++ b/automad/src/client/admin/styles/components/editor/toolbar.less
@@ -41,8 +41,8 @@
 	overflow: hidden;
 	opacity: 0;
 	transition:
-		opacity 0.2s 0.5s,
-		height 0s 0.8s;
+		opacity 0.2s 0.2s,
+		height 0s 0.4s;
 
 	.am-c-ed-bl-section__editor & {
 		top: 0.2rem !important;
@@ -69,9 +69,18 @@
 
 	@supports selector(:has(*)) {
 		.codex-editor > &:not(:has(.ce-settings:empty)) {
-			opacity: 1;
-			height: auto;
-			overflow: visible;
+			opacity: 1 !important;
+			height: auto !important;
+			overflow: visible !important;
+		}
+
+		.codex-editor:not(.codex-editor--toolbox-opened):has(
+				.codex-editor:hover
+			)
+			> & {
+			opacity: 0;
+			height: 0;
+			overflow: hidden;
 		}
 	}
 
